--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@
     pointer-events: none;
     transform: translate(-50%,-50%);
     transition: 0.1s;
+    opacity: 1;
 }
 .cursor2{
     position: fixed;
@@ -59,11 +60,13 @@
     pointer-events: none;
     transform: translate(-50%,-50%);
     transition: 0.15s;
+    opacity: 1;
 }
 
 @media only screen and (max-width:800px){
     .cursor,.cursor2{
         width: 0;
         height: 0;
+        opacity: 0;
     }
 }
